Updated vehicleListing & Created Importer